--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,9 @@ background-color: #fff;
 }
 button {
     cursor: pointer;
-    background-color: #4d5ae5;
-}
+    border: none;
+    outline: transparent;
+   }
 a {
     text-decoration: none;
 }
@@ -133,7 +134,7 @@ margin-left: auto;
 
 }
 .hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-image-hero.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -399,5 +400,257 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
 .icon {
     fill: #F4F4FD;
-
 }
+.footer-social {
+    margin-right: 80px;
+}
+.footer-subscribe-text {
+    color: #fff;
+    font-weight: 500;
+    margin-bottom: 16px;
+}
+.footer-subscribe-form {
+    display: flex;
+    gap: 24px;
+}
+.subscribe-form-input {
+    display: flex;
+    width: 264px;
+    height: 40px;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    padding-right: 16px;
+    align-items: center;
+    border: 1px solid #ffff;
+    background-color: transparent;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    color: #fff;
+}
+.footer-subscribe-form .subscribe-form-input::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04m;
+    color: #fff;
+}
+.subscribe-button {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    height: 40px;
+    min-width: 165px;
+    justify-content: center;
+    line-height: 1.5;
+    border-radius: 4px;
+    padding: 0px 24px; 
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    text-align: center;
+    background: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #fff;
+}
+.subscribe-button:hover, 
+.subscribe-button:focus {
+    background-color: #404BBF;
+    }
+    .subscribe-button .subscribe-icon {
+        margin-left: 16px;
+        fill: #fff;
+}
+.backdrop {
+    position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 99999;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  background: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-window {
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 408px;
+  border-radius: 4px;
+  min-height: 584px;
+  padding: 72px 24px 24px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background-color: #fcfcfc;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .modal-close-btn {
+    position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #e7e9fc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+}
+.modal-close-icon {
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-close-btn:hover .modal-close-icon,
+  .modal-close-btn:focus .modal-close-icon {
+    fill: #fff;
+  }
+  .modal-window-title {
+    font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  min-width: 360px;
+  margin-bottom: 16px;
+  color: #2e2f42;
+  }
+  .modal-form-input {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  background-color: transparent;
+  padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-input:hover,
+.modal-form-input:focus {
+  border-color: #4d5ae5;
+}
+.modal-form-label {
+    display: block;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
+  color: #8e8f99;
+}
+.modal-form-field-wrapper {
+    margin-bottom: 8px;
+  }
+  .modal-form-field-wrapper-comments {
+    margin-bottom: 16px;
+  }
+  .modal-form-input-wrapper {
+    position: relative;
+  }
+  .modal-form-field-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-field-icon:hover,
+  .modal-form-field-icon:focus {
+    fill: #ffffff;
+  }
+  .modal-form-input:focus + .feedback-form-field-icon {
+    fill: #4d5ae5;
+  }
+  .modal-form-message {
+    width: 100%;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    height: 120px;
+    resize: none;
+    padding: 8px 16px;
+    background-color: transparent;
+    outline: transparent;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-message::placeholder {
+    color: rgba(46, 47, 66, 0.4);
+  }
+  .modal-form-message:focus {
+    border-color: #4d5ae5;
+  }
+  .modal-form-checkbox-lable {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+  }
+  .modal-form-checkbox-wrapper {
+    margin-bottom: 24px;
+  }
+  .modal-form-own-checkbox {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center; 
+}
+.modal-form-privacy-checkbox:checked
+  + .modal-form-checkbox-lable
+  .modal-form-own-checkbox {
+  background-color: #404bbf;
+  fill: #f4f4fd;
+  border: none;
+}
+.modal-form-privacy-checkbox:focus
+  + .modal-form-checkbox-lable
+  .modal-form-own-checkbox {
+  outline: 1px solid #4d5ae5;
+}
+.privacy-policy-link {
+    text-decoration: underline;
+    line-height: 1.33;
+    color: #4d5ae5;
+  }
+  .modal-form-submit-btn {
+    display: block;
+    margin: 0 auto;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    border-radius: 4px;
+    padding: 16px 32px;
+    min-width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #fff;
+  }
+  .modal-form-submit-btn:hover,
+  .modal-form-submit-btn:focus {
+    background-color: #404bbf;
+  }
