--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,9 @@ img {
     height: auto;
     mask-type: 32px;
     }
+    input {
+        outline: transparent;
+    }
     .container {
         width: 1158px;
         padding-left: 15px;
@@ -614,7 +617,17 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   .modal-form-own-checkbox {
     display: inline-flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    fill: transparent;
+    margin-right: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-privacy-checkbox:checked
   + .modal-form-checkbox-lable
